2002-05-10  Daniel Elstner  <daniel.elstner@gmx.net>

	[ merge from stable ]

	* gtk/gtktreemodel.c: #define INITIALIZE_TREE_ITER(),
	which zeroes out all GtkTreeIter fields. (#81380)
	(gtk_tree_model_get_iter): Use it.
	(gtk_tree_model_iter_children): ditto
	(gtk_tree_model_iter_nth_child): ditto
	(gtk_tree_model_iter_parent): ditto

2002-05-08  Michael Natterer  <mitch@gimp.org>

	* configure.in: fixed yesterdays fix for cross compiling: simply
	check the variable "cross_compiling" which gets set by autoconf.

Wed May  8 16:14:49 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktreeview.c 
	(gtk_tree_view_init): set_redraw_on_allocate (FALSE);
	(gtk_tree_view_size_allocate): invalidate last column if width
	changed.
	(gtk_tree_view_bin_expose): skip over cells that aren't in
	event->region

Tue May  7 18:36:03 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/x11/xsettings-client.c (xsettings_client_process_event): 
 	Check for selection_atom, not property name atom.
 
2002-05-07  Michael Natterer  <mitch@gimp.org>

	* configure.in: added a new conditional CROSS_COMPILING which
	indicates ($build != $host). If it is set, look for
	gdk-pixbuf-csource in PATH. Error out if it was not found.

	* gtk/stock-icons/Makefile.am: use the gdk-pixbuf-csource found at
	configure time if CROSS_COMPILING is set, use the one which was
	just built otherwise.

2002-05-07  Anders Carlsson  <andersca@gnu.org>

	* gdk/x11/xsettings-client.c (xsettings_client_process_event): 
	Only process manager events with the correct atom.

2002-05-07  Matthias Clasen  <maclas@gmx.de>

	Fix for #79248:
	
	* gdk/x11/gdkwindow-x11.c (gdk_window_new): 
	(gdk_window_set_events): Always select for property notify for
	maintaining window state.

	* gdk/x11/gdkevents-x11.c (gdk_event_translate): Only propagate
	property notifys if they were selected by gdk_window_set_events.

Mon May  6 23:48:14 2002  Kristian Rietveld  <kris@gtk.org>
